--- a/EURS/EU_Rap_Show___Playlist___EURapShow_files/EU_Rap_Show___Playlist___EURapShow.css
+++ b/EURS/EU_Rap_Show___Playlist___EURapShow_files/EU_Rap_Show___Playlist___EURapShow.css
@@ -701,6 +701,10 @@ a:hover {
     color: rgb(88, 77, 77);
     text-decoration: underline;
 }
+#widget5 a {
+    color: rgb(88, 77, 77);
+    text-decoration: underline;
+}
 #id3 div.caption {
     line-height: 16px;
     margin-bottom: 0px;
@@ -767,6 +771,10 @@ a:hover {
 #widget1 {
     display: none;
 }
+#widget5 a:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
 .spacer {
     font-size: 1px;
     line-height: 1px;
@@ -811,6 +819,10 @@ a:hover {
 }
 #widget4 a:hover {
     color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
+#widget5 a:visited {
+    color: rgb(121, 121, 121);
     text-decoration: underline;
 }
 #widget0 .Comment_Posted_Date {
