--- a/EURS/EU_Rap_Show___About___EURapShow_files/EU_Rap_Show___About___EURapShow.css
+++ b/EURS/EU_Rap_Show___About___EURapShow_files/EU_Rap_Show___About___EURapShow.css
@@ -292,22 +292,6 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style_SkipStroke_1 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_2 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_3 {
-    background: rgb(0, 0, 0);
-    opacity: 1.00;
-}
 .paragraph_style_13 {
     color: rgb(255, 255, 255);
     font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
@@ -329,6 +313,22 @@
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
+}
+.style_SkipStroke_1 {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_SkipStroke_2 {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_SkipStroke {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_SkipStroke_3 {
+    background: rgb(0, 0, 0);
+    opacity: 1.00;
 }
 .style_1 {
     font-family: 'ArialMT', 'Arial', sans-serif;
@@ -509,9 +509,6 @@
 .graphic_textbox_layout_style_default {
     padding: 4px;
 }
-.graphic_textbox_layout_style_default_External_169_150 {
-    position: relative;
-}
 .graphic_textbox_layout_style_default_External_471_53 {
     position: relative;
 }
@@ -519,6 +516,9 @@
     position: relative;
 }
 .graphic_textbox_layout_style_default_External_100_131 {
+    position: relative;
+}
+.graphic_textbox_layout_style_default_External_293_190 {
     position: relative;
 }
 .graphic_textbox_layout_style_default_External_350_36 {
@@ -711,9 +711,37 @@ a:hover {
     color: rgb(1, 25, 147);
     text-decoration: underline;
 }
+#widget1 a:visited {
+    color: rgb(1, 25, 147);
+    text-decoration: underline;
+}
+#widget0 a:visited {
+    color: rgb(1, 25, 147);
+    text-decoration: underline;
+}
+#widget1 a:hover {
+    color: rgb(1, 25, 147);
+    text-decoration: underline;
+}
+.spacer {
+    font-size: 1px;
+    line-height: 1px;
+}
+#widget3 a:visited {
+    color: rgb(1, 25, 147);
+    text-decoration: underline;
+}
 #widget2 a:visited {
     color: rgb(1, 25, 147);
     text-decoration: underline;
+}
+#widget3 a:hover {
+    color: rgb(1, 25, 147);
+    text-decoration: underline;
+}
+#widget0 a {
+    color: rgb(1, 25, 147);
+    text-decoration: none;
 }
 #widget1 a {
     color: rgb(1, 25, 147);
@@ -723,29 +751,13 @@ a:hover {
     color: rgb(1, 25, 147);
     text-decoration: underline;
 }
-#widget1 a:hover {
-    color: rgb(1, 25, 147);
-    text-decoration: underline;
-}
-#widget0 a:visited {
-    color: rgb(1, 25, 147);
-    text-decoration: underline;
-}
-#widget0 a {
+#widget3 a {
     color: rgb(1, 25, 147);
     text-decoration: none;
-}
-#widget1 a:visited {
-    color: rgb(1, 25, 147);
-    text-decoration: underline;
 }
 #widget2 a {
     color: rgb(1, 25, 147);
     text-decoration: none;
-}
-.spacer {
-    font-size: 1px;
-    line-height: 1px;
 }
 #widget2 a:hover {
     color: rgb(1, 25, 147);
