--- a/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow_files/EU_Rap_Show___Home___EURapShow.css
+++ b/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow_files/EU_Rap_Show___Home___EURapShow.css
@@ -87,6 +87,44 @@
     text-transform: none;
 }
 .paragraph_style_4 {
+    color: rgb(41, 47, 51);
+    font-family: 'HelveticaNeue', 'Helvetica Neue', 'Arial', sans-serif;
+    font-size: 14px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 16px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.style {
+    font-family: 'Arial-BoldMT', 'Arial', sans-serif;
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px;
+}
+.style_1 {
+    font-family: 'Arial-ItalicMT', 'Arial', sans-serif;
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 20px;
+}
+.paragraph_style_5 {
     color: rgb(105, 105, 105);
     font-family: 'HelveticaNeue', 'Helvetica Neue', 'Arial', sans-serif;
     font-size: 15px;
@@ -108,7 +146,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_5 {
+.paragraph_style_6 {
     color: rgb(255, 255, 255);
     font-family: 'ArialMT', 'Arial', sans-serif;
     font-size: 13px;
@@ -130,35 +168,13 @@
     text-indent: 0px;
     text-transform: none;
 }
-.style {
+.style_2 {
     font-family: 'ArialMT', 'Arial', sans-serif;
     font-size: 12px;
     font-stretch: normal;
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-}
-.paragraph_style_6 {
-    color: rgb(255, 255, 255);
-    font-family: 'ArialMT', 'Arial', sans-serif;
-    font-size: 11px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 28px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
 }
 .paragraph_style_7 {
     color: rgb(255, 255, 255);
@@ -184,14 +200,14 @@
 }
 .paragraph_style_8 {
     color: rgb(255, 255, 255);
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 13px;
+    font-family: 'ArialMT', 'Arial', sans-serif;
+    font-size: 11px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 24px;
+    line-height: 28px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -203,47 +219,17 @@
     text-decoration: none;
     text-indent: 0px;
     text-transform: none;
-}
-.style_1 {
-    font-family: 'ArialMT', 'Arial', sans-serif;
-    font-size: 13px;
-    font-stretch: normal;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
 }
 .paragraph_style_9 {
-    color: rgb(255, 126, 0);
+    color: rgb(255, 255, 255);
     font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 12px;
+    font-size: 13px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 14px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_10 {
-    color: rgb(0, 0, 0);
-    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
-    font-size: 12px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: 14px;
+    line-height: 24px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -276,7 +262,59 @@
     background: rgb(0, 0, 0);
     opacity: 1.00;
 }
+.style_3 {
+    font-family: 'ArialMT', 'Arial', sans-serif;
+    font-size: 13px;
+    font-stretch: normal;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+}
+.paragraph_style_10 {
+    color: rgb(255, 126, 0);
+    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
+    font-size: 12px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
 .paragraph_style_11 {
+    color: rgb(0, 0, 0);
+    font-family: 'Times-Roman', 'Times', 'Times New Roman', serif;
+    font-size: 12px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 14px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_12 {
     color: rgb(255, 255, 255);
     font-family: 'ArialMT', 'Arial', sans-serif;
     font-size: 13px;
@@ -376,10 +414,10 @@
 .graphic_textbox_layout_style_default {
     padding: 4px;
 }
-.graphic_textbox_layout_style_default_External_471_53 {
+.graphic_textbox_layout_style_default_External_666_42 {
     position: relative;
 }
-.graphic_textbox_layout_style_default_External_169_150 {
+.graphic_textbox_layout_style_default_External_471_53 {
     position: relative;
 }
 .graphic_textbox_layout_style_default_External_100_131 {
@@ -401,6 +439,12 @@
     position: relative;
 }
 .graphic_textbox_layout_style_default_External_1041_54 {
+    position: relative;
+}
+.graphic_textbox_layout_style_default_External_504_469 {
+    position: relative;
+}
+.graphic_textbox_layout_style_default_External_209_211 {
     position: relative;
 }
 .graphic_textbox_style_default_SkipStroke {
@@ -611,6 +655,14 @@ a:hover {
     color: rgb(88, 77, 77);
     text-decoration: underline;
 }
+#widget4 a {
+    color: rgb(88, 77, 77);
+    text-decoration: underline;
+}
+#widget4 a:visited {
+    color: rgb(121, 121, 121);
+    text-decoration: underline;
+}
 #widget2 a:hover {
     color: rgb(0, 0, 0);
     text-decoration: underline;
@@ -702,6 +754,10 @@ a:hover {
     text-align: left;
     text-decoration: none;
     text-transform: none;
+}
+#widget4 a:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
 }
 #widget0 .Summary_Comment {
     color: rgb(88, 77, 77);
