--- a/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow_files/EU_Rap_Show___Home___EURapShow.css
+++ b/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow_files/EU_Rap_Show___Home___EURapShow.css
@@ -429,6 +429,9 @@
 .graphic_textbox_layout_style_default_External_100_137 {
     position: relative;
 }
+.graphic_textbox_layout_style_default_External_245_523 {
+    position: relative;
+}
 .graphic_textbox_layout_style_default_External_253_165 {
     position: relative;
 }
@@ -439,9 +442,6 @@
     position: relative;
 }
 .graphic_textbox_layout_style_default_External_1041_54 {
-    position: relative;
-}
-.graphic_textbox_layout_style_default_External_504_469 {
     position: relative;
 }
 .graphic_textbox_layout_style_default_External_209_211 {
@@ -655,6 +655,14 @@ a:hover {
     color: rgb(88, 77, 77);
     text-decoration: underline;
 }
+#widget4 a {
+    color: rgb(88, 77, 77);
+    text-decoration: underline;
+}
+#widget4 a:visited {
+    color: rgb(121, 121, 121);
+    text-decoration: underline;
+}
 #widget2 a:hover {
     color: rgb(0, 0, 0);
     text-decoration: underline;
@@ -746,6 +754,10 @@ a:hover {
     text-align: left;
     text-decoration: none;
     text-transform: none;
+}
+#widget4 a:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
 }
 #widget0 .Summary_Comment {
     color: rgb(88, 77, 77);
