--- a/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow_files/EU_Rap_Show___Home___EURapShow.css
+++ b/EURS/EU_Rap_Show___Home___EURapShow/EU_Rap_Show___Home___EURapShow_files/EU_Rap_Show___Home___EURapShow.css
@@ -87,7 +87,7 @@
     text-transform: none;
 }
 .paragraph_style_4 {
-    color: rgb(41, 47, 51);
+    color: rgb(33, 33, 33);
     font-family: 'HelveticaNeue', 'Helvetica Neue', 'Arial', sans-serif;
     font-size: 14px;
     font-stretch: normal;
@@ -259,6 +259,10 @@
     opacity: 1.00;
 }
 .style_SkipStroke_4 {
+    background: transparent url(backgroundimage_1.jpg) no-repeat scroll center center;
+    opacity: 1.00;
+}
+.style_SkipStroke_5 {
     background: rgb(0, 0, 0);
     opacity: 1.00;
 }
