--- a/EURS/📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow_files/📻_EU_Rap_Show___Episodes___EURapShow.css
+++ b/EURS/📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow_files/📻_EU_Rap_Show___Episodes___EURapShow.css
@@ -647,7 +647,19 @@ a:hover {
     color: rgb(88, 77, 77);
     text-decoration: underline;
 }
+#widget6 a {
+    color: rgb(88, 77, 77);
+    text-decoration: underline;
+}
+#widget6 a:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
 #widget4 a:visited {
+    color: rgb(121, 121, 121);
+    text-decoration: underline;
+}
+#widget6 a:visited {
     color: rgb(121, 121, 121);
     text-decoration: underline;
 }
