--- a/EURS/📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow_files/📻_EU_Rap_Show___Episodes___EURapShow.css
+++ b/EURS/📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow_files/📻_EU_Rap_Show___Episodes___EURapShow.css
@@ -1,26 +1,4 @@
 .paragraph_style {
-    color: rgb(4, 51, 255);
-    font-family: 'Arial-BoldMT', 'Arial', sans-serif;
-    font-size: 36px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 50px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_1 {
     color: rgb(1, 25, 147);
     font-family: 'Arial-BoldItalicMT', 'Arial', sans-serif;
     font-size: 18px;
@@ -42,7 +20,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_2 {
+.paragraph_style_1 {
     color: rgb(4, 51, 255);
     font-family: 'Arial-BoldMT', 'Arial', sans-serif;
     font-size: 15px;
@@ -64,7 +42,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_3 {
+.paragraph_style_2 {
     color: rgb(88, 77, 77);
     font-family: 'Arial-BoldMT', 'Arial', sans-serif;
     font-size: 15px;
@@ -86,7 +64,7 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_4 {
+.paragraph_style_3 {
     color: rgb(4, 51, 255);
     font-family: 'Arial-BoldMT', 'Arial', sans-serif;
     font-size: 18px;
@@ -96,6 +74,28 @@
     font-weight: 700;
     letter-spacing: 0;
     line-height: 25px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_4 {
+    color: rgb(4, 51, 255);
+    font-family: 'Arial-BoldMT', 'Arial', sans-serif;
+    font-size: 36px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 50px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -295,6 +295,10 @@
     opacity: 1.00;
 }
 .style_SkipStroke_4 {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_SkipStroke_5 {
     background: rgb(0, 0, 0);
     opacity: 1.00;
 }
@@ -425,7 +429,7 @@
 .graphic_textbox_layout_style_default_External_100_160 {
     position: relative;
 }
-.graphic_textbox_layout_style_default_External_1041_54 {
+.graphic_textbox_layout_style_default_External_1060_57 {
     position: relative;
 }
 .graphic_textbox_layout_style_default_External_100_30 {
@@ -453,7 +457,6 @@ a.class1:visited {
 }
 a.class1:hover {
     color: rgb(1, 25, 147);
-    text-decoration: underline;
 }
 a.class10 {
     color: rgb(255, 255, 255);
@@ -559,7 +562,6 @@ a.class4:visited {
 }
 a.class4:hover {
     color: rgb(1, 25, 147);
-    text-decoration: underline;
 }
 a.class5 {
     color: rgb(4, 51, 255);
@@ -571,7 +573,6 @@ a.class5:visited {
 }
 a.class5:hover {
     color: rgb(1, 25, 147);
-    text-decoration: underline;
 }
 a.class6 {
     color: rgb(255, 255, 255);
