--- a/EURS/📻_EU_Rap_Show___Playlist___EURapShow_files/📻_EU_Rap_Show___Playlist___EURapShow.css
+++ b/EURS/📻_EU_Rap_Show___Playlist___EURapShow_files/📻_EU_Rap_Show___Playlist___EURapShow.css
@@ -2,28 +2,6 @@
     padding: 0px;
 }
 .paragraph_style {
-    color: rgb(4, 51, 255);
-    font-family: 'Arial-BoldMT', 'Arial', sans-serif;
-    font-size: 36px;
-    font-stretch: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: 50px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    opacity: 1.00;
-    padding-bottom: 0px;
-    padding-top: 0px;
-    text-align: left;
-    text-decoration: none;
-    text-indent: 0px;
-    text-transform: none;
-}
-.paragraph_style_1 {
     color: rgb(1, 25, 147);
     font-family: 'Arial-BoldItalicMT', 'Arial', sans-serif;
     font-size: 18px;
@@ -45,8 +23,30 @@
     text-indent: 0px;
     text-transform: none;
 }
-.paragraph_style_2 {
+.paragraph_style_1 {
     color: rgb(4, 51, 255);
+    font-family: 'Arial-BoldMT', 'Arial', sans-serif;
+    font-size: 15px;
+    font-stretch: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 20px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+    opacity: 1.00;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    text-align: left;
+    text-decoration: none;
+    text-indent: 0px;
+    text-transform: none;
+}
+.paragraph_style_2 {
+    color: rgb(88, 77, 77);
     font-family: 'Arial-BoldMT', 'Arial', sans-serif;
     font-size: 15px;
     font-stretch: normal;
@@ -69,14 +69,14 @@
 }
 .paragraph_style_3 {
     color: rgb(88, 77, 77);
-    font-family: 'Arial-BoldMT', 'Arial', sans-serif;
-    font-size: 15px;
+    font-family: 'ArialMT', 'Arial', sans-serif;
+    font-size: 10px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: 700;
+    font-weight: 400;
     letter-spacing: 0;
-    line-height: 20px;
+    line-height: 13px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -90,15 +90,15 @@
     text-transform: none;
 }
 .paragraph_style_4 {
-    color: rgb(88, 77, 77);
-    font-family: 'ArialMT', 'Arial', sans-serif;
-    font-size: 10px;
+    color: rgb(4, 51, 255);
+    font-family: 'Arial-BoldMT', 'Arial', sans-serif;
+    font-size: 36px;
     font-stretch: normal;
     font-style: normal;
     font-variant: normal;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 0;
-    line-height: 13px;
+    line-height: 50px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
@@ -228,6 +228,10 @@
     opacity: 1.00;
 }
 .style_SkipStroke_5 {
+    background: transparent;
+    opacity: 1.00;
+}
+.style_SkipStroke_6 {
     background: rgb(0, 0, 0);
     opacity: 1.00;
 }
@@ -457,18 +461,18 @@
 .graphic_textbox_layout_style_default_External_100_160 {
     position: relative;
 }
-.graphic_textbox_layout_style_default_External_1041_54 {
+.graphic_textbox_layout_style_default_External_1060_57 {
     position: relative;
 }
 .graphic_textbox_style_default_SkipStroke {
     background: transparent;
     opacity: 1.00;
 }
-.image_cluster_layout_style_default_External_128_48 {
-    position: relative;
-}
 .image_cluster_layout_style_default {
     padding: 0px;
+}
+.image_cluster_layout_style_default_External_128_48 {
+    position: relative;
 }
 a {
     color: rgb(88, 77, 77);
@@ -488,7 +492,6 @@ a.class1:visited {
 }
 a.class1:hover {
     color: rgb(1, 25, 147);
-    text-decoration: underline;
 }
 a.class10 {
     color: rgb(255, 255, 255);
@@ -572,7 +575,6 @@ a.class2:visited {
 }
 a.class2:hover {
     color: rgb(1, 25, 147);
-    text-decoration: underline;
 }
 a.class3 {
     color: rgb(4, 51, 255);
@@ -584,7 +586,6 @@ a.class3:visited {
 }
 a.class3:hover {
     color: rgb(1, 25, 147);
-    text-decoration: underline;
 }
 a.class4 {
     color: rgb(4, 51, 255);
@@ -596,7 +597,6 @@ a.class4:visited {
 }
 a.class4:hover {
     color: rgb(1, 25, 147);
-    text-decoration: underline;
 }
 a.class5 {
     color: rgb(4, 51, 255);
@@ -608,7 +608,6 @@ a.class5:visited {
 }
 a.class5:hover {
     color: rgb(1, 25, 147);
-    text-decoration: underline;
 }
 a.class6 {
     color: rgb(255, 255, 255);
