--- a/EURS/📻_EU_Rap_Show___About___EURapShow_files/📻_EU_Rap_Show___About___EURapShow.css
+++ b/EURS/📻_EU_Rap_Show___About___EURapShow_files/📻_EU_Rap_Show___About___EURapShow.css
@@ -553,6 +553,7 @@ a:visited {
 }
 a.class1 {
     color: rgb(4, 51, 255);
+    text-decoration: none;
 }
 a.class1:visited {
     color: rgb(4, 51, 255);
@@ -613,16 +614,27 @@ a.class14:hover {
     color: rgb(255, 255, 255);
 }
 a.class15 {
-    color: rgb(255, 252, 121);
+    color: rgb(255, 255, 255);
 }
 a.class15:visited {
-    color: rgb(255, 252, 121);
+    color: rgb(255, 255, 255);
+    text-decoration: none;
 }
 a.class15:hover {
+    color: rgb(255, 255, 255);
+}
+a.class16 {
+    color: rgb(255, 252, 121);
+}
+a.class16:visited {
+    color: rgb(255, 252, 121);
+}
+a.class16:hover {
     color: rgb(255, 252, 121);
 }
 a.class2 {
     color: rgb(4, 51, 255);
+    text-decoration: none;
 }
 a.class2:visited {
     color: rgb(4, 51, 255);
@@ -634,6 +646,7 @@ a.class2:hover {
 }
 a.class3 {
     color: rgb(4, 51, 255);
+    text-decoration: none;
 }
 a.class3:visited {
     color: rgb(4, 51, 255);
@@ -645,6 +658,7 @@ a.class3:hover {
 }
 a.class4 {
     color: rgb(4, 51, 255);
+    text-decoration: none;
 }
 a.class4:visited {
     color: rgb(4, 51, 255);
@@ -656,6 +670,7 @@ a.class4:hover {
 }
 a.class5 {
     color: rgb(4, 51, 255);
+    text-decoration: none;
 }
 a.class5:visited {
     color: rgb(4, 51, 255);
@@ -666,19 +681,20 @@ a.class5:hover {
     text-decoration: underline;
 }
 a.class6 {
-    color: rgb(255, 255, 255);
+    color: rgb(4, 51, 255);
     text-decoration: none;
 }
 a.class6:visited {
-    color: rgb(255, 255, 255);
+    color: rgb(4, 51, 255);
     text-decoration: none;
 }
 a.class6:hover {
-    color: rgb(255, 255, 255);
+    color: rgb(1, 25, 147);
     text-decoration: underline;
 }
 a.class7 {
     color: rgb(255, 255, 255);
+    text-decoration: none;
 }
 a.class7:visited {
     color: rgb(255, 255, 255);
@@ -686,6 +702,7 @@ a.class7:visited {
 }
 a.class7:hover {
     color: rgb(255, 255, 255);
+    text-decoration: underline;
 }
 a.class8 {
     color: rgb(255, 255, 255);
