--- a/EURS/📻_EU_Rap_Show___Contact___EURapShow_files/📻_EU_Rap_Show___Contact___EURapShow.css
+++ b/EURS/📻_EU_Rap_Show___Contact___EURapShow_files/📻_EU_Rap_Show___Contact___EURapShow.css
@@ -445,6 +445,7 @@ a:visited {
 }
 a.class1 {
     color: rgb(4, 51, 255);
+    text-decoration: none;
 }
 a.class1:visited {
     color: rgb(4, 51, 255);
@@ -505,16 +506,27 @@ a.class14:hover {
     color: rgb(255, 255, 255);
 }
 a.class15 {
-    color: rgb(255, 252, 121);
+    color: rgb(255, 255, 255);
 }
 a.class15:visited {
-    color: rgb(255, 252, 121);
+    color: rgb(255, 255, 255);
+    text-decoration: none;
 }
 a.class15:hover {
+    color: rgb(255, 255, 255);
+}
+a.class16 {
+    color: rgb(255, 252, 121);
+}
+a.class16:visited {
+    color: rgb(255, 252, 121);
+}
+a.class16:hover {
     color: rgb(255, 252, 121);
 }
 a.class2 {
     color: rgb(4, 51, 255);
+    text-decoration: none;
 }
 a.class2:visited {
     color: rgb(4, 51, 255);
@@ -526,6 +538,7 @@ a.class2:hover {
 }
 a.class3 {
     color: rgb(4, 51, 255);
+    text-decoration: none;
 }
 a.class3:visited {
     color: rgb(4, 51, 255);
@@ -537,6 +550,7 @@ a.class3:hover {
 }
 a.class4 {
     color: rgb(4, 51, 255);
+    text-decoration: none;
 }
 a.class4:visited {
     color: rgb(4, 51, 255);
@@ -548,6 +562,7 @@ a.class4:hover {
 }
 a.class5 {
     color: rgb(4, 51, 255);
+    text-decoration: none;
 }
 a.class5:visited {
     color: rgb(4, 51, 255);
@@ -558,19 +573,20 @@ a.class5:hover {
     text-decoration: underline;
 }
 a.class6 {
-    color: rgb(255, 255, 255);
+    color: rgb(4, 51, 255);
     text-decoration: none;
 }
 a.class6:visited {
-    color: rgb(255, 255, 255);
+    color: rgb(4, 51, 255);
     text-decoration: none;
 }
 a.class6:hover {
-    color: rgb(255, 255, 255);
+    color: rgb(1, 25, 147);
     text-decoration: underline;
 }
 a.class7 {
     color: rgb(255, 255, 255);
+    text-decoration: none;
 }
 a.class7:visited {
     color: rgb(255, 255, 255);
@@ -578,6 +594,7 @@ a.class7:visited {
 }
 a.class7:hover {
     color: rgb(255, 255, 255);
+    text-decoration: underline;
 }
 a.class8 {
     color: rgb(255, 255, 255);
