--- a/EURS/📻_EU_Rap_Show___Playlist___EURapShow_files/📻_EU_Rap_Show___Playlist___EURapShow.css
+++ b/EURS/📻_EU_Rap_Show___Playlist___EURapShow_files/📻_EU_Rap_Show___Playlist___EURapShow.css
@@ -228,10 +228,6 @@
     opacity: 1.00;
 }
 .style_SkipStroke_5 {
-    background: transparent;
-    opacity: 1.00;
-}
-.style_SkipStroke_6 {
     background: rgb(0, 0, 0);
     opacity: 1.00;
 }
@@ -554,14 +550,26 @@ a.class14:hover {
     text-decoration: underline;
 }
 a.class15 {
-    color: rgb(255, 252, 121);
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 a.class15:visited {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+a.class15:hover {
+    color: rgb(255, 255, 255);
+    text-decoration: underline;
+}
+a.class16 {
+    color: rgb(255, 252, 121);
+    text-decoration: none;
+}
+a.class16:visited {
     color: rgb(255, 252, 121);
     text-decoration: underline;
 }
-a.class15:hover {
+a.class16:hover {
     color: rgb(255, 252, 121);
     text-decoration: underline;
 }
@@ -610,16 +618,15 @@ a.class5:hover {
     color: rgb(1, 25, 147);
 }
 a.class6 {
-    color: rgb(255, 255, 255);
+    color: rgb(4, 51, 255);
     text-decoration: none;
 }
 a.class6:visited {
-    color: rgb(255, 255, 255);
+    color: rgb(4, 51, 255);
     text-decoration: none;
 }
 a.class6:hover {
-    color: rgb(255, 255, 255);
-    text-decoration: underline;
+    color: rgb(1, 25, 147);
 }
 a.class7 {
     color: rgb(255, 255, 255);
