--- a/EURS/📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow_files/📻_EU_Rap_Show___Episodes___EURapShow.css
+++ b/EURS/📻_EU_Rap_Show___Episodes___EURapShow/📻_EU_Rap_Show___Episodes___EURapShow_files/📻_EU_Rap_Show___Episodes___EURapShow.css
@@ -631,6 +631,10 @@ a:hover {
     color: rgb(0, 0, 0);
     text-decoration: underline;
 }
+#widget8 a:hover {
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
 #widget2 a {
     color: rgb(88, 77, 77);
     text-decoration: underline;
@@ -780,6 +784,10 @@ a:hover {
     text-decoration: none;
     text-transform: none;
 }
+#widget8 a:visited {
+    color: rgb(121, 121, 121);
+    text-decoration: underline;
+}
 #widget4 a {
     color: rgb(88, 77, 77);
     text-decoration: underline;
@@ -802,6 +810,10 @@ a:hover {
 }
 #widget7 a:hover {
     color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
+#widget8 a {
+    color: rgb(88, 77, 77);
     text-decoration: underline;
 }
 #widget0 .Summary_Body {
