--- a/EURS/📻_EU_Rap_Show___About___EURapShow_files/📻_EU_Rap_Show___About___EURapShow.css
+++ b/EURS/📻_EU_Rap_Show___About___EURapShow_files/📻_EU_Rap_Show___About___EURapShow.css
@@ -756,6 +756,14 @@ a:hover {
     color: rgb(1, 25, 147);
     text-decoration: underline;
 }
+#widget4 a:hover {
+    color: rgb(1, 25, 147);
+    text-decoration: underline;
+}
+#widget4 a:visited {
+    color: rgb(1, 25, 147);
+    text-decoration: underline;
+}
 #widget0 a {
     color: rgb(1, 25, 147);
     text-decoration: none;
@@ -783,6 +791,10 @@ a:hover {
 .bumper {
     font-size: 1px;
     line-height: 1px;
+}
+#widget4 a {
+    color: rgb(1, 25, 147);
+    text-decoration: none;
 }
 body { 
     -webkit-text-size-adjust: none;
