mix cloud follow widget added

--- a/EURS/📻_EU_Rap_Show___Contact___EURapShow_files/📻_EU_Rap_Show___Contact___EURapShow.css
+++ b/EURS/📻_EU_Rap_Show___Contact___EURapShow_files/📻_EU_Rap_Show___Contact___EURapShow.css
@@ -636,7 +636,15 @@ a:hover {
     font-size: 1px;
     line-height: 1px;
 }
+#widget3 a:visited {
+    color: rgb(1, 25, 147);
+    text-decoration: underline;
+}
 #widget2 a:visited {
+    color: rgb(1, 25, 147);
+    text-decoration: underline;
+}
+#widget3 a:hover {
     color: rgb(1, 25, 147);
     text-decoration: underline;
 }
@@ -667,6 +675,10 @@ a:hover {
 .bumper {
     font-size: 1px;
     line-height: 1px;
+}
+#widget3 a {
+    color: rgb(1, 25, 147);
+    text-decoration: none;
 }
 body { 
     -webkit-text-size-adjust: none;
